Bug 87700 - Formatting error after Dissociate Cells
Summary: Formatting error after Dissociate Cells
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-08-21 20:10 UTC by Inge Wallin
Modified: 2004-10-20 21:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Inge Wallin 2004-08-21 20:10:06 UTC
Version:           1.3 (using KDE KDE 3.2.2)
OS:                Linux

1. Enter the text "A" in A1.
2. Select the area A1:B1
3. Choose Data->Merge Cells
4. Make the text in the merged cell centered
5. Choose Data->Dissociate Cells.

Now, the "A" is placed on the border between A1 and B1 which used to be the center of the two merged cells.  

If three cells are merged instead of two, the "A"	disappears completely after the dissociation.  It is still there, though, since you can see it again if you make A1 left aligned.
Comment 1 Inge Wallin 2004-10-20 21:32:36 UTC
CVS commit by ingwa: 

Fix bug 87700: Formatting error after Dissociate Cells

BUG: 87700

I will backport to the 1.3 branch.


  M +16 -11    kspread_sheet.cc   1.628


--- koffice/kspread/kspread_sheet.cc  #1.627:1.628
@@ -6293,4 +6293,9 @@ void KSpreadSheet::dissociateCell( const
     QRect selection( marker.x(), marker.y(), x, y );
     refreshMergedCell();
+
+  // Must be called, because the call to refreshMergedCell() doesn't
+  // set this flag on the cell itself.
+  cell->setLayoutDirtyFlag(true);
+
     emit sig_updateView( this, selection );
 }