Fix bug 87700: Formatting error after Dissociate Cells

BUG: 87700

I will backport to the 1.3 branch.

svn path=/trunk/koffice/; revision=356297